--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" 
     crossorigin="anonymous">
     <title>AviaTest</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div class="container">
@@ -53,6 +53,6 @@
             </div>
         </div>
     </div>
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
